# emoji_builder

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE-BSD-2  LICENSE-Fuchsia  LICENSES.md  README.md  crates.md  github_workflow_setup.sh  requirements.txt
.github/workflows/: docker.yml  rust.yml
licenses/: README.txt  UNKNOWN_COPYRIGHT
licenses/cloudflare-zlib/: README.md
licenses/cloudflare-zlib-0.2.2/: README.md
licenses/cloudflare-zlib-sys/: README.md
licenses/gimp_palette/: LICENSE  README.md
licenses/lyon_geom/: UNKNOWN_COPYRIGHT
licenses/phf/: UNKNOWN_COPYRIGHT
licenses/rgb/: UNKNOWN_COPYRIGHT
licenses/sw-composite/: LICENSE-BSD-3
licenses/sw-composite-0.5.10/: UNKNOWN_COPYRIGHT
licenses/typed-arena-1.4.1/: UNKNOWN_COPYRIGHT
licenses/wild-2.0.1/: UNKNOWN_COPYRIGHT
src/: builder.rs  changes.rs  cli.yaml  config.rs  deriving_emoji_processor.rs  emoji.rs  emoji_postprocessor.rs  emoji_processor.rs  emoji_tables.rs  lib.rs  loadable.rs  main.rs  unicode_tables.rs
src/builders/: blobmoji.rs  mod.rs
src/builders/blobmoji/: error.rs  image_utils.rs  mod.rs  noto_emoji_utils.rs  rendering.rs  waveflag.rs
src/builders/blobmoji/add_glyphs/: add_glyphs.py
src/builders/blobmoji/map_pua_emoji/: map_pua_emoji.py
src/builders/blobmoji/noto-emoji/: SOURCE.txt
src/configs/: builder_config.rs  config.rs  config_file.rs  mod.rs
src/emoji_processors/: mod.rs  reduce_colors.rs  skin_color_generator.rs  waveflag.rs
src/emojis/: emoji.rs  emoji_kind.rs  emoji_status.rs  mod.rs
src/loadables/: cli_loadable.rs  loadable.rs  loading_error.rs  mod.rs  prototype_error.rs
src/loadables/prototypes/: deserialize.rs  mod.rs
src/loadables/sources/: fs_source.rs  mod.rs  reader_source.rs
src/packs/: mod.rs  pack.rs  pack_files.rs  tests.rs
src/tables/: emoji_tables.rs  errors.rs  mod.rs  online.rs  prototype.rs  regexes.rs  tests.rs  utils.rs
src/tests/: builder_test.rs  emoji_test.rs  mod.rs  utils_test.rs
src/tests/integration/: builder.rs  caller.rs  mod.rs
test_files/: hash.csv  hashes.csv
test_files/packs/basic_pack/: emoji-test.txt  pack.json
test_files/tables/: LICENSE-UNICODE  emoji-data.txt  emoji-zwj-sequences.txt  license.html
test_files/unicode/: emoji-data.txt  emoji-zwj-sequences.txt
test_files/unicode_tables/: license.html
