[package]
name = "emoji_builder"
version = "0.1.0"
authors = ["Constantin A. <emoji.builder@c1710.de>"]
edition = "2018"
license = "Apache-2.0"


[dependencies]
resvg = "0.11.0"
# It looks like parallel processing inside parallel processing doesn't work
oxipng = {version = "3.0.0", default-features = false}
regex = "1.1.6"
hex = "0.3"
lazy_static = "1.3.0"
libc = "0.2.58"
csv = "1"
sha2 = "0.8.0"
itertools = "0.8.0"
rand = "0.6.5"
rayon = "1.0"
remove_dir_all = "0.5.1"
clap = {version = "2.33", features = ["yaml"]}
png = "0.16.5"
tempfile = "3.0.8"
usvg = "0.11.0"
digest = "0.8.0"
yaml-rust = "0.3.5"
rctree = "0.3"
bytecount = "0.6.0"
pyo3 = "0.11.1"
log = "0.4.8"
gimp_palette = "0.1.1"

stderrlog = "0.4.3"
