[package]
name = "emoji_builder"
version = "0.1.0"
authors = ["Constantin A. <emoji.builder@c1710.de>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["online"]

# Enables fetching the emoji tables directly from the web
online = ["reqwest", "futures", "bytes"]

[dependencies]
resvg = "0.22.0"
usvg = "0.22.0"
tiny-skia = "0.6.1"
# It looks like parallel processing inside parallel processing doesn't work
oxipng = {version = "5.0.1", default-features = false}
regex = "1.1.6"
hex = "0.4.3"
lazy_static = "1.3.0"
libc = "0.2.58"
csv = "1"
sha2 = "0.8.1"
digest = "0.8.1"
itertools = "0.10.3"
rand = "0.8.5"
rayon = "1.0"
clap = {version = "2.33", features = ["yaml"]}
yaml-rust = "0.3.5"
png = "0.17.5"
tempfile = "3.0.8"
rctree = "0.4"
bytecount = "0.6.0"
pyo3 = {version = "0.13.2", features = ["auto-initialize"] }
log = "0.4.8"
gimp_palette = "0.1.1"
palette = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
include_dir = "0.7.2"

reqwest = { version = "0.11.10", features = ["blocking"], optional = true }
futures = { version = "0.3.5", optional = true }
bytes = { version = "1.1.0", optional = true }


stderrlog = "0.4.3"
